update mingw build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CXX_STANDARD_REQUIRED ON)
 project (GLSLCOOKBOOK)
 
 IF(MINGW)
+  set(CMAKE_BUILD_TYPE "Debug")
   SET(CMAKE_C_FLAGS  ${CMAKE_C_FLAGS} "-g")
   SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-g")
 ELSE(MINGW)
