--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,6 @@
 {
     "version": "0.2.0",
     "configurations": [
-
         {
             "name": "C++ Launch (GDB)",
             "type": "cppdbg",
@@ -12,6 +11,31 @@
             "stopAtEntry": false,
             // "cwd": "${workspaceFolder}",
             "cwd": "${workspaceFolder}/build/mingw/chapter01/",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            // "preLaunchTask": "compile", // task.json 中的 label
+            "preLaunchTask": "", // task.json 中的 label
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        {
+            "name": "CMake C++ Launch (GDB)",
+            "type": "cppdbg",
+            "request": "launch",
+            // "program": "${workspaceFolder}/build/chapter01/chapter01.exe", // 可执行文件位置
+            "program": "${command:cmake.launchTargetPath}",
+            "miDebuggerPath":"C:\\msys64\\mingw64\\bin\\gdb.exe", // gdb 位置
+            "args": ["basic"],
+            "stopAtEntry": false,
+            // "cwd": "${workspaceFolder}",
+            // "cwd": "${workspaceFolder}/build/chapter01/",
+            "cwd": "${command:cmake.launchTargetDirectory}",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
