--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
         {
             "label": "compile",
             "type": "shell",
-            "command": "./mingw-cmake-build.bat",
+            "command": "./build-mingw.bat",
             "group": {
                 "kind": "build",
                 "isDefault": true
