--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,12 @@
             "name": "AAAAA (GDB)",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/build/mingw/chapter01/chapter01.exe", // 可执行文件位置
-            "miDebuggerPath":"C:\\msys64\\mingw64\\bin\\gdb.exe", // gdb 位置
+            "program": "${workspaceFolder}/build/mingw/chapter01/chapter01.exe", 
+            "miDebuggerPath":"C:\\msys64\\mingw64\\bin\\gdb.exe", 
             "args": [
                 "basic"
             ],
+            // "args": [""],
             "stopAtEntry": false,
             // "cwd": "${workspaceFolder}",
             "cwd": "${workspaceFolder}/build/mingw/chapter01/",
@@ -27,29 +28,17 @@
             ]
         },
         {
-            "name": "CMake C++ Launch (GDB)",
-            "type": "cppdbg",
+            "name": "AAAAA (msvc)",
+            "type": "cppvsdbg",
             "request": "launch",
-            // "program": "${workspaceFolder}/build/chapter01/chapter01.exe", // 可执行文件位置
-            "program": "${command:cmake.launchTargetPath}",
-            "miDebuggerPath":"C:\\msys64\\mingw64\\bin\\gdb.exe", // gdb 位置
-            "args": ["basic"],
+            "program": "${workspaceFolder}/build/win64/chapter01/Debug/chapter01.exe", 
+            "args": [
+                "basic"
+            ],
             "stopAtEntry": false,
-            // "cwd": "${workspaceFolder}",
-            // "cwd": "${workspaceFolder}/build/chapter01/",
-            "cwd": "${command:cmake.launchTargetDirectory}",
+            "cwd": "${workspaceFolder}/build/win64/chapter01/", 
             "environment": [],
-            "externalConsole": false,
-            "MIMode": "gdb",
-            // "preLaunchTask": "compile", // task.json 中的 label
-            "preLaunchTask": "", // task.json 中的 label
-            "setupCommands": [
-                {
-                    "description": "Enable pretty-printing for gdb",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
-                }
-            ]
-        }
+            "externalConsole": false
+        },
     ]
 }
