--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,7 +2,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "build",
+            "label": "build mingw",
             "type": "shell",
             "command": "./build-mingw.bat",
             "group": {
@@ -14,9 +14,33 @@
             ]
         },
         {
-            "label": "build target",
+            "label": "build target mingw",
             "type": "shell",
             "command": "./build-mingw.bat chapter01",
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "problemMatcher": [
+                "$gcc"
+            ]
+        },
+        {
+            "label": "build vs2017",
+            "type": "shell",
+            "command": "./build-sln.bat",
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "problemMatcher": [
+                "$gcc"
+            ]
+        },
+        {
+            "label": "build target vs2017",
+            "type": "shell",
+            "command": "./build-sln.bat chapter01",
             "group": {
                 "kind": "build",
                 "isDefault": true
